# blackTDE

./: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: prd-v1.md
docs/superpowers/plans/: 2026-07-01-core-shell-plan.md  2026-07-02-advanced-cockpit-plan.md  2026-07-02-provider-adapter-plan.md  2026-07-02-workspace-operations-plan.md  2026-07-11-tech-gray-icon-plan.md  2026-07-11-terminal-session-stability-plan.md  2026-07-15-build-sh-plan.md  2026-07-16-agent-resume-icons-markdown-dmg.md  2026-07-16-persistent-local-shell-resume.md
src/: App.tsx  agentIcons.ts  index.css  markdown.ts  sessionUtils.ts  shellRestore.ts  terminalRestore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260701000000_init.sql  20260702000000_provider_keys.sql  20260702100000_advanced_configs.sql  20260702200000_proxy_redesign.sql  20260712000000_ssh_support.sql
src-tauri/src/: db.rs  event_bus.rs  file_manager.rs  git_runner.rs  main.rs  process.rs  provider.rs  settings.rs  shell_session.rs  ssh_sftp.rs
src/components/: AgentIcon.tsx  EditorPane.tsx  FilePreview.tsx  FileTree.tsx  GitDiffCompare.tsx  GitPanel.tsx  MermaidBlock.tsx  ProviderVault.tsx  SearchPanel.tsx  SettingsPanel.tsx  TerminalGrid.tsx  TerminalPane.tsx
src/store/: workspaceStore.ts
tests/: agentIcons.test.ts  markdownPreview.test.ts  sessionUtils.test.ts  shellRestore.test.ts  terminalRestore.test.ts  workspaceStore.test.ts
(+9 files in other folders)
