[package]
name = "black_tde"
version = "0.1.0"
description = "Terminal Development Environment"
authors = ["TDE Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate"] }

[build-dependencies]
tauri-build = "2.0.0"

